--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -45,6 +45,7 @@
 # [+]2022-11-06 30、添加icloud、qq、tencent、weixin指定域名的DNS解析，并添加两个mitm域名排除
 # [-]2022-11-13 31、删除QQ域名的DNS解析
 # [+]2022-11-24 32、替换失效的临时使用魔法订阅，新增一条分流
+# [+]2022-11-30 32、新建github库，并替换失效连接
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
