--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -45,7 +45,7 @@
 # [+]2022-11-06 30、添加icloud、qq、tencent、weixin指定域名的DNS解析，并添加两个mitm域名排除
 # [-]2022-11-13 31、删除QQ域名的DNS解析
 # [+]2022-11-24 32、替换失效的临时使用魔法订阅，新增一条分流
-# [+]2022-11-30 32、新建github库，并替换失效连接
+# [+]2022-11-30 32、新建github库，并替换失效连接，删除ForOwnUse.conf引用链接
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -111,7 +111,6 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 [rewrite_remote]
 
 #>>>>>>>>>>>解锁会员
-#https://github.com/ddgksf2013/Rewrite/raw/master/ForOwnUse.conf, tag=墨鱼专属VIP@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=B站去广告+1080P高码率@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/UnlockVip/Spotify.conf, tag=Spotify音乐VIP@app2smile, update-interval=86400, opt-parser=false, enabled=true
 
