--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -45,7 +45,7 @@
 # [+]2022-11-06 30、添加icloud、qq、tencent、weixin指定域名的DNS解析，并添加两个mitm域名排除
 # [-]2022-11-13 31、删除QQ域名的DNS解析
 # [+]2022-11-24 32、替换失效的临时使用魔法订阅，新增一条分流
-# [+]2022-11-30 32、新建github库，并替换失效连接，删除ForOwnUse.conf引用链接
+# [+]2022-11-30 32、新建github库，并替换失效连接，删除ForOwnUse.conf引用链接，添加一个豆瓣电影网页快捷跳转重写
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -141,7 +141,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 #>>>>>>>>>>>网页优化
 https://github.com/ddgksf2013/Rewrite/raw/master/Html/WebAdBlock.conf, tag=影视网站去广告@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/Function/Q-Search.conf, tag=Safari超级搜索@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
-
+https://github.com/ddgksf2013/Rewrite/raw/master/Function/Douban.conf, tag=豆瓣电影网页快捷跳转@@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 
 #>>>>>>>>>>>未启用的重写
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/JD_TB_price.conf, tag=比价脚本@Orz-3, update-interval=86400, opt-parser=false, enabled=false
