--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -159,7 +159,7 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 # > 为避免网易云解锁节点滥用，有需求的请去墨鱼手记公众号回复「网易云」获取
 
 # > 魔法仅供临时使用
-https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg, tag=临时使用, update-interval=3600, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg, tag=临时使用, update-interval=3600, opt-parser=true, enabled=true
 
 
 
