--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,7 +4,7 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2022/12/03 10:30 UTC/GMT +8
+// @UpdateTime        2022/12/11 09:50 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、超级VIP、智能分流、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
@@ -47,6 +47,7 @@
 # [+]2022-11-24 32、替换失效的临时使用魔法订阅，新增一条分流
 # [+]2022-11-30 32、新建github库，并替换失效连接，删除ForOwnUse.conf引用链接，添加一个豆瓣电影网页快捷跳转重写
 # [+]2022-12-03 33、小白配置分流新增微信直连分流，以改善微信转圈问题
+# [-]2022-12-11 34、删除dohDNS解析，兼容低版本QX，同时改善商店应用下载速度过慢情况
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -165,13 +166,13 @@ https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg, tag=临时使
 
 [dns]
 
-prefer-doh3
+#prefer-doh3
 no-ipv6
 no-system
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
-doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
+#doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 server=/*icloud.com/119.29.29.29
 server=/*icloud.com.cn/119.29.29.29
 server=/*tencent.com/119.29.29.29
