--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -74,7 +74,7 @@
 ; https://app.initnil.com/tvOS.mobileconfig
 
 
-# > 以上全部内容[1-76行]可自行在配置中删除，对使用并无影响
+# > 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
 
 [general]
 
@@ -231,6 +231,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 # > 一些比较容易忽视的分流
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
+host, ad.12306.cn, direct
 
 # > 知乎AD屏蔽,以下规则请放置在filter_local最顶部
 DOMAIN,118.89.204.198,REJECT
