--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,15 +1,15 @@
 // ==UserScript==
 // @ConfigName        墨鱼自用的QX配置文件
-// @Author            Cuttlefish
+// @Author            @Cuttlefish, @ddgksf2013
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2022/12/29 08:40 UTC/GMT +8
+// @UpdateTime        2023/01/08 10:50 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、超级VIP、智能分流、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V151)
+// @ConfigVersion     2.0 (V153)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -51,7 +51,7 @@
 # [+]2022-12-16 35、添加一条微博去开屏广告的直连分流，将微博去广告换成ddgksf2013的链接
 # [+]2022-12-28 36、替换两个重写的路径，由Function改为Html
 # [+]2022-12-29 37、将Streaming.list与StreamingSE.list里面的爱奇艺分流删除，港台番剧名称改为B站番剧
-
+# [+]2022-01-08 38、添加高德地图APP净化重写，使用时需卸载重新安装
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
@@ -74,7 +74,7 @@
 ; https://app.initnil.com/tvOS.mobileconfig
 
 
-# > 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
+# > 以上全部内容[!包括本行!]可自行在配置中删除，对使用并无影响
 
 [general]
 
@@ -136,7 +136,7 @@ https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Applet.conf, tag=微信
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/YoutubeAds.conf, tag=油管去广告@DivineEngine, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Weibo.conf, tag=微博去广告@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Ximalaya.conf, tag=喜马拉雅去广告@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
-
+https://github.com/ddgksf2013/Scripts/raw/master/amap.js, tag=高德地图净化[卸载重装]@ddgksf2013, update-interval=86400, opt-parser=true, enabled=true
 
 #>>>>>>>>>>>通用去广告
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rewrite/QuantumultX/Advertising/Advertising.conf, tag=去广告重写@blackmatrix7, update-interval=86400, opt-parser=false, enabled=true
