--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V153)
+// @ConfigVersion     2.0 (V154)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -229,11 +229,12 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 [filter_local]
 
 # > 一些比较容易忽视的分流
+host, ad.12306.cn, direct
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
-host, ad.12306.cn, direct
+host, amdc.m.taobao.com, reject
 
-# > 知乎AD屏蔽,以下规则请放置在filter_local最顶部
+# > 知乎AD屏蔽
 DOMAIN,118.89.204.198,REJECT
 DOMAIN-KEYWORD,118.89.204.198,REJECT
 IP-CIDR,118.89.204.198/32,REJECT
