--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V154)
+// @ConfigVersion     2.0 (V155)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -74,7 +74,7 @@
 ; https://app.initnil.com/tvOS.mobileconfig
 
 
-# > 以上全部内容[!包括本行!]可自行在配置中删除，对使用并无影响
+# 🟢 以上全部内容[!包括本行!]可自行在配置中删除，对使用并无影响
 
 [general]
 
