--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/01/08 10:50 UTC/GMT +8
+// @UpdateTime        2023/01/18 13:20 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V158)
+// @ConfigVersion     2.0 (V159)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -51,7 +51,10 @@
 # [+]2022-12-16 35、添加一条微博去开屏广告的直连分流，将微博去广告换成ddgksf2013的链接
 # [+]2022-12-28 36、替换两个重写的路径，由Function改为Html
 # [+]2022-12-29 37、将Streaming.list与StreamingSE.list里面的爱奇艺分流删除，港台番剧名称改为B站番剧
-# [+]2022-01-08 38、添加高德地图APP净化重写，使用时需卸载重新安装
+# [+]2023-01-08 38、添加高德地图APP净化重写，使用时需卸载重新安装
+# [+]2023-01-18 39、优化policy组下子策略分配，将B站番剧更名为哔哩哔哩
+
+
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
