--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -232,6 +232,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 [filter_local]
 
 # > 一些比较容易忽视的分流
+host-suffix, kuwo.cn, direct
 host, ad.12306.cn, direct
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
