--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/01/18 13:20 UTC/GMT +8
+// @UpdateTime        2023/01/31 13:40 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V160)
+// @ConfigVersion     2.0 (V161)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -53,7 +53,7 @@
 # [+]2022-12-29 37、将Streaming.list与StreamingSE.list里面的爱奇艺分流删除，港台番剧名称改为B站番剧
 # [+]2023-01-08 38、添加高德地图APP净化重写，使用时需卸载重新安装
 # [+]2023-01-18 39、优化policy组下子策略分配，将B站番剧更名为哔哩哔哩
-
+# [+]2023-01-31 40、更新IOS系统屏蔽系统更新描述文件的URL地址
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -73,8 +73,8 @@
 
 # > 推荐使用的旧版应用如下链接所示
 ; https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=y6do1j
-# > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15）
-; https://app.initnil.com/tvOS.mobileconfig
+# > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15、16）
+; https://initnil.com/tvOS.mobileconfig
 
 
 # 🟢 以上全部内容[!包括本行!]可自行在配置中删除，对使用并无影响
