--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V163)
+// @ConfigVersion     2.0 (V164)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -55,7 +55,7 @@
 # [+]2023-01-18 39、优化policy组下子策略分配，将B站番剧更名为哔哩哔哩
 # [+]2023-01-31 40、更新IOS系统屏蔽系统更新描述文件的URL地址
 # [+]2023-02-01 41、随原作者@blackmatrix7更换知乎净化助手的引用链接
-# [+]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net
+# [+]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net，删除部分本地分流
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
@@ -235,15 +235,6 @@ host, gg.caixin.com, direct
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
 host, amdc.m.taobao.com, reject
-
-# > 知乎AD屏蔽
-DOMAIN,118.89.204.198,REJECT
-DOMAIN-KEYWORD,118.89.204.198,REJECT
-IP-CIDR,118.89.204.198/32,REJECT
-DOMAIN,appcloud2.in.zhihu.com,REJECT
-HOST,mqtt.zhihu.com,reject
-HOST,sugar.zhihu.com,reject
-USER-AGENT,AVOS*,REJECT
 
 # > 贴吧屏蔽域名dns查询
 ip-cidr, 180.76.76.200/32, reject
