--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V165)
+// @ConfigVersion     2.0 (V166)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -35,7 +35,7 @@
 # [+]2022-07-10 19、精简DNS，添加更多geo_location_checker选项  
 # [-]2022-07-31 20、去除B站自动策略，有需要，请自行添加，精简配置头的部分说明
 # [+]2022-08-05 21、新增节点响应时间限制server_check_timeout
-# [+]2022-08-15 22、将geo_location_checker设置为disabled，删除几条通用去广告（与StartUp.conf有部分重复，也与知乎、值得买等有重复）
+# [-]2022-08-15 22、将geo_location_checker设置为disabled，删除几条通用去广告（与StartUp.conf有部分重复，也与知乎、值得买等有重复）
 # [+]2022-08-17 23、将DivineEngine的更改为blackmatrix7的Advertising.conf，将未启用的重写放置QX界面最下端，
 # [+]2022-08-21 24、添加dprefer-doh3(doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query)QX1.0.30+
 # [+]2022-09-19 25、将final分流绑定黑白名单policy，由用户自行选择直连或是代理，server_check_url响应地址改为http://www.gstatic.com/generate_204
@@ -55,8 +55,8 @@
 # [+]2023-01-18 39、优化policy组下子策略分配，将B站番剧更名为哔哩哔哩
 # [+]2023-01-31 40、更新IOS系统屏蔽系统更新描述文件的URL地址
 # [+]2023-02-01 41、随原作者@blackmatrix7更换知乎净化助手的引用链接
-# [+]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net，删除部分本地分流
-# [+]2023-02-24 43、移除什么值得买去广告[无法MITM]
+# [-]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net，删除部分本地分流
+# [-]2023-02-24 43、移除什么值得买去广告[无法MITM]
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
