--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -58,6 +58,8 @@
 # [-]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net，删除部分本地分流
 # [-]2023-02-24 43、移除什么值得买去广告[无法MITM]
 
+
+
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 ; https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
@@ -230,12 +232,13 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 [filter_local]
 
 # > 一些比较容易忽视的分流
-host-suffix, kuwo.cn, direct
 host, ad.12306.cn, direct
 host, gg.caixin.com, direct
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
 host, amdc.m.taobao.com, reject
+host, ntb.lanjie100.com, reject
+host-suffix, kuwo.cn, direct
 
 # > 贴吧屏蔽域名dns查询
 ip-cidr, 180.76.76.200/32, reject
