--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V167)
+// @ConfigVersion     2.0 (V168)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -57,7 +57,7 @@
 # [+]2023-02-01 41、随原作者@blackmatrix7更换知乎净化助手的引用链接
 # [-]2023-02-19 42、去广告分流已简化为一条墨鱼自用的链接anti-ad.net，删除部分本地分流
 # [-]2023-02-24 43、移除什么值得买去广告[无法MITM]
-# [-]2023-03-22 44、为国际媒体、与全球加速policy添加DIRECT选项，方便某些用户使用QX仅用于去广告与Crack
+# [-]2023-03-22 44、为国际媒体与全球加速policy添加DIRECT选项，方便某些用户使用QX仅用于去广告与Crack
 
 
 
