--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -82,7 +82,7 @@
 ; https://initnil.com/tvOS.mobileconfig
 
 
-# 🟢 以上全部内容[!包括本行!]可自行在配置中删除，对使用并无影响
+# 🟢 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
 
 [general]
 
