--- a/ClashForWindows.yaml
+++ b/ClashForWindows.yaml
@@ -60,7 +60,7 @@ pr:
   &a3
   type: select
   proxies:
-    - 🚀 自动选择
+    - ♻️ 自动选择
     - 🚀 手动切换
     - 🇭🇰 香港节点
     - 🇯🇵 日本节点
@@ -147,7 +147,7 @@ proxy-groups:
   - name: 🐟 兜底分流
     <<: *a3
 #节点分组
-  - name: 🚀 自动选择
+  - name: ♻️ 自动选择
     <<: *a4
   - name: 🇭🇰 香港节点
     <<: *a4
