--- a/ClashforWindows.yaml
+++ b/ClashforWindows.yaml
@@ -8,8 +8,8 @@
 # @Function          支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点等等   
 # @ClashDownload     https://github.com/Fndroid/clash_for_windows_pkg/releases
 # @Thanks            @blackmatrix7, @Fndroid, @Anti
-# @Attention         请使用最新版ClashforWindows
-# @ConfigVersion     1.0.6
+# @Attention         𝐏𝐥𝐞𝐚𝐬𝐞 𝐮𝐬𝐞 𝐭𝐡𝐞 𝐥𝐚𝐭𝐞𝐬𝐭 𝐯𝐞𝐫𝐬𝐢𝐨𝐧 𝐨𝐟 𝐂𝐥𝐚𝐬𝐡𝐟𝐨𝐫𝐖𝐢𝐧𝐝𝐨𝐰𝐬
+# @ConfigVersion     1.0.7
 # ==/UserScript==      
 
 port: 7890
