--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V170)
+// @ConfigVersion     2.0 (V171)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -59,7 +59,7 @@
 # [-]2023-02-24 43、移除什么值得买去广告[无法MITM]
 # [-]2023-03-22 44、为国际媒体与全球加速policy添加DIRECT选项，方便某些用户使用QX仅用于去广告与Crack
 # [-]2023-04-10 45、删除流媒体HK、TW、JP、US分流，添加OpenAi分流
-# [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写
+# [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写，使用前建议卸载两APP，重新安装
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
