--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -59,7 +59,7 @@
 # [-]2023-02-24 43、移除什么值得买去广告[无法MITM]
 # [-]2023-03-22 44、为国际媒体与全球加速policy添加DIRECT选项，方便某些用户使用QX仅用于去广告与Crack
 # [-]2023-04-10 45、删除流媒体HK、TW、JP、US分流，添加OpenAi分流
-# [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写，使用前建议卸载两APP，重新安装
+# [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写，使用前建议卸载两APP，重新安装，移除AMDC本地分流
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -238,7 +238,6 @@ host, ad.12306.cn, direct
 host, gg.caixin.com, direct
 host, sdkapp.uve.weibo.com, direct
 host-suffix, u3.ucweb.com, reject
-host, amdc.m.taobao.com, reject
 host, ntb.lanjie100.com, reject
 host-suffix, kuwo.cn, direct
 
