--- a/ClashforWindows.yaml
+++ b/ClashforWindows.yaml
@@ -1,29 +1,31 @@
+#==========================================
 # @ConfigName        墨鱼自用Clash配置文件
 # @Author            @ddgksf2013
 # @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 # @WechatID          公众号墨鱼手记
 # @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# @UpdateTime        2023/05/24 22:10 UTC/GMT +8
+# @UpdateTime        2023/05/26 18:30 UTC/GMT +8
 # @Function          支持手动选择、自动测速、广告屏蔽、兜底分流、按国家分组节点等等   
 # @ClashDownload     https://github.com/Fndroid/clash_for_windows_pkg/releases
 # @Thanks            @blackmatrix7, @Fndroid, @Anti
 # @Attention         𝐏𝐥𝐞𝐚𝐬𝐞 𝐮𝐬𝐞 𝐭𝐡𝐞 𝐥𝐚𝐭𝐞𝐬𝐭 𝐯𝐞𝐫𝐬𝐢𝐨𝐧 𝐨𝐟 𝐂𝐥𝐚𝐬𝐡𝐟𝐨𝐫𝐖𝐢𝐧𝐝𝐨𝐰𝐬
-# @ConfigVersion     1.0.9
-
-port: 7890
-socks-port: 7891
-redir-port: 7892
-mixed-port: 7893
-allow-lan: true
-bind-address: "*"
-mode: rule
-log-level: info
-ipv6: false
+# @ConfigVersion     1.0.12
+#==========================================
+port: 7890           # HTTP 代理端口
+socks-port: 7891     # Socks 端口
+redir-port: 7892     # Redir 端口
+mixed-port: 7893     # 混合端口
+allow-lan: true      # 允许局域网连接
+bind-address: "*"    # 地址绑定
+mode: rule           # 规则模式
+log-level: info      # 日志级别
+ipv6: false          # IPV6开关
 external-controller: 127.0.0.1:9090
+
 dns:
-  enable: true
-  ipv6: false
-  listen: 0.0.0.0:53
+  enable: true       # 不使用系统 DNS
+  ipv6: false        # 关闭 IPV6
+  listen: 0.0.0.0:53 # dns 监听
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
@@ -40,11 +42,10 @@ dns:
     - "*.battlenet.com"
     - "*.blzstatic.cn"
     - "*.battle.net"
-  nameserver:
+  nameserver:        # 默认 DNS 服务
     - 223.5.5.5
     - 119.29.29.29
-    - 114.114.114.114
-  fallback:
+  fallback:          # 国外 DNS 服务器
     - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
     - https://dns.alidns.com/dns-query
@@ -53,180 +54,75 @@ dns:
     geoip-code: CN
     ipcidr:
       - 240.0.0.0/4
-#锚点
-pr:
-  &a3
-  type: select
-  proxies:
-    - ♻️ 自动选择
-    - 🚀 手动切换
-    - 🇭🇰 香港节点
-    - 🇯🇵 日本节点
-    - 🇺🇲 美国节点
-    - 🇨🇳 台湾节点
-    - 🇸🇬 狮城节点
-    - DIRECT
-p:
-  &a1
-  type: http
-  interval: 86400
-  health-check:
-    enable: true
-    url: http://www.gstatic.com/generate_204
-    interval: 1800
-auto:
-  &a4
-  type: url-test
-  lazy: true
-  url: http://www.gstatic.com/generate_204
-  interval: 900
-  use:
-    - Subscribe
-use:
-  &a2
-  type: select
-  use:
-    - Subscribe
-c:
-  &a6
-  type: http
-  behavior: classical
-  interval: 86400
-d:
-  &a5
-  type: http
-  behavior: domain
-  interval: 86400
-i:
-  &a7
-  type: http
-  behavior: ipcidr
-  interval: 86400
+#========= 建立锚点 =========#
+
+# 策略组引用
+pr:   &a3 {type: select, proxies: [♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, DIRECT] }
+# 订阅更新
+p:    &a1 {type: http, interval: 86400, health-check: {enable: true, url: http://www.gstatic.com/generate_204, interval: 1800} }
+# 自动选择
+auto: &a4 {type: url-test, lazy: true, url: http://www.gstatic.com/generate_204, interval: 900, use: [Subscribe] }
+# 手动选择
+use:  &a2 {type: select, use: [Subscribe] }
+# classical 规则
+c:    &a6 {type: http, behavior: classical, interval: 86400}
+# domain 规则
+d:    &a5 {type: http, behavior: domain, interval: 86400}
+# ipcidr 规则
+i:    &a7 {type: http, behavior: ipcidr, interval: 86400}
+
 proxy-providers:
   Subscribe:
     <<: *a1
-    url: https://sub.xeton.dev/sub?target=clash&url=请手动填入你的订阅[多链接用|分割]&list=true&udp=false 
+    url: https://sub.xeton.dev/sub?target=clash&url=请手动填入你的订阅[多机场订阅用|分割即可]&list=true&udp=false 
     path: ./proxy_providers/tmp.yaml
 
 
 proxies: null
 proxy-groups:
+
 #分流分组
-  - name: 🚀 手动切换
-    <<: *a2
-  - name: 🌏 全球加速
-    <<: *a3
-  - name: 🍎 苹果服务
-    <<: *a3
-  - name: 📺 哔哩哔哩
-    type: select
-    proxies:
-      - DIRECT
-      - 🇭🇰 香港节点
-      - 🇨🇳 台湾节点
-  - name: 🤖 OpenAi
-    type: select
-    proxies:
-      - 🇺🇲 美国节点
-  - name: 🎬 国际媒体
-    <<: *a3
-  - name: 🌌 谷歌服务
-    <<: *a3
-  - name: 📟 电报消息
-    <<: *a3
-  - name: 🐦 推特服务
-    <<: *a3
-  - name: 🎮 游戏平台
-    <<: *a3
-  - name: 🆎 AdBlock
-    type: select
-    proxies:
-      - REJECT
-  - name: 🐟 兜底分流
-    <<: *a3
+  - {name: 🚀 手动切换, <<: *a2}
+  - {name: 🌏 全球加速, <<: *a3}
+  - {name: 🍎 苹果服务, <<: *a3}
+  - {name: 📺 哔哩哔哩, type: select, proxies: [DIRECT, 🇭🇰 香港节点, 🇨🇳 台湾节点]}
+  - {name: 🤖 OpenAi,   type: select, proxies: [🇺🇲 美国节点]}
+  - {name: 🎬 国际媒体, <<: *a3}
+  - {name: 🌌 谷歌服务, <<: *a3}
+  - {name: 📟 电报消息, <<: *a3}
+  - {name: 🐦 推特服务, <<: *a3}
+  - {name: 🎮 游戏平台, <<: *a3}
+  - {name: 🆎 AdBlock, type: select, proxies: [REJECT]}
+  - {name: 🐟 兜底分流, <<: *a3}
+  
 #节点分组
-  - name: ♻️ 自动选择
-    <<: *a4
-  - name: 🇭🇰 香港节点
-    <<: *a4
-    filter: 港|HK|(?i)Hong
-  - name: 🇯🇵 日本节点
-    <<: *a4
-    filter: 日|东京|JP|(?i)Japan
-  - name: 🇨🇳 台湾节点
-    <<: *a4
-    filter: 台|湾|TW|(?i)Taiwan
-  - name: 🇺🇲 美国节点
-    <<: *a4
-    filter: 美|US|(?i)States|American
-  - name: 🇸🇬 狮城节点
-    <<: *a4
-    filter: 新|坡|SG|(?i)Singapore
+  - {name: ♻️ 自动选择, <<: *a4}
+  - {name: 🇭🇰 香港节点, <<: *a4, filter: "港|HK|(?i)Hong"}
+  - {name: 🇯🇵 日本节点, <<:  *a4, filter: "日|东京|JP|(?i)Japan"}
+  - {name: 🇨🇳 台湾节点, <<: *a4, filter: "台|湾|TW|(?i)Taiwan"}
+  - {name: 🇺🇲 美国节点, <<: *a4, filter: "美|US|(?i)States|American"}
+  - {name: 🇸🇬 狮城节点, <<: *a4,filter: "新|坡|SG|(?i)Singapore"}
+
+# 分流规则 
 rule-providers:
-  Direct:
-    <<: *a5
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.yaml
-    path: ./ruleset/Direct.yaml
-  Lan:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
-    path: ./ruleset/Lan.yaml
-  Download:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Download/Download.yaml
-    path: ./ruleset/Download.yaml
-  Ad:
-    <<: *a5
-    url: https://anti-ad.net/clash.yaml
-    path: ./ruleset/anti-ad-clash.yaml
-  OpenAi:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml
-    path: ./ruleset/OpenAi.yaml
-  BiliBili:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml
-    path: ./ruleset/BiliBili.yaml
-  GlobalMedia:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
-    path: ./ruleset/GlobalMedia.yaml
-  Apple:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml
-    path: ./ruleset/Apple.yaml
-  Github:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
-    path: ./ruleset/Github.yaml
-  Microsoft:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml
-    path: ./ruleset/Microsoft.yaml
-  Google:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml
-    path: ./ruleset/Google.yaml
-  Telegram:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml
-    path: ./ruleset/Telegram.yaml
-  Twitter:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml
-    path: ./ruleset/Twitter.yaml
-  Game:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml
-    path: ./ruleset/Game.yaml
-  ChinaIP:
-    <<: *a7
-    url: https://cdn.jsdelivr.net/gh/soffchen/GeoIP2-CN@release/clash-rule-provider.yml
-    path: ./ruleset/ChinaIP.yaml
-  ProxyLite:
-    <<: *a6
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ProxyLite/ProxyLite.yaml
-    path: ./ruleset/ProxyLite.yaml
+  Direct:      {<<: *a5, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.yaml,                      path: ./ruleset/Direct.yaml}
+  Lan:         {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml,                            path: ./ruleset/Lan.yaml }
+  Download:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Download/Download.yaml,                  path: ./ruleset/Download.yaml}
+  Ad:          {<<: *a5, url: https://anti-ad.net/clash.yaml,                                                                                     path: ./ruleset/anti-ad-clash.yaml}
+  OpenAi:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml,                      path: ./ruleset/OpenAi.yaml}
+  BiliBili:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml,                  path: ./ruleset/BiliBili.yaml}
+  GlobalMedia: {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml}
+  Apple:       {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml,              path: ./ruleset/Apple.yaml}
+  Github:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml,                      path: ./ruleset/Github.yaml}
+  Microsoft:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml,                path: ./ruleset/Microsoft.yaml}
+  Google:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml,                      path: ./ruleset/Google.yaml}
+  Telegram:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml,                  path: ./ruleset/Telegram.yaml}
+  Twitter:     {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml,                    path: ./ruleset/Twitter.yaml}
+  Game:        {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml,                          path: ./ruleset/Game.yaml}
+  ChinaIP:     {<<: *a7, url: https://cdn.jsdelivr.net/gh/soffchen/GeoIP2-CN@release/clash-rule-provider.yml,                                     path: ./ruleset/ChinaIP.yaml}
+  ProxyLite:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ProxyLite/ProxyLite.yaml,                path: ./ruleset/ProxyLite.yaml}
+  
+ # 分流Policy 
 rules:
 
   - RULE-SET,Direct,DIRECT
