--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/06/04 09:30 UTC/GMT +8
+// @UpdateTime        2023/06/28 16:38 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V175)
+// @ConfigVersion     2.0 (V176)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -62,6 +62,7 @@
 # [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写，使用前建议卸载两APP，重新安装，移除AMDC本地分流
 # [-]2023-06-02 47、替换苹果服务分流规则为@blackmatrix7，解决懒人配置中苹果服务部分域名无法走指定policy的问题[已调整位置]
 # [-]2023-06-04 48、移除部分重写，添加小红书去水印重写，重新整理重写Part部分
+# [-]2023-06-28 49、调整本地夸克APP的分流规则
 
 
 
@@ -240,7 +241,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 host, ad.12306.cn, direct
 host, gg.caixin.com, direct
 host, sdkapp.uve.weibo.com, direct
-host-suffix, u3.ucweb.com, reject
+host-suffix, u9.ucweb.com, direct
 host, ntb.lanjie100.com, reject
 host-suffix, kuwo.cn, direct
 
