--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -62,7 +62,7 @@
 # [-]2023-05-09 46、添加网易云音乐、百度地图广告净化重写，使用前建议卸载两APP，重新安装，移除AMDC本地分流
 # [-]2023-06-02 47、替换苹果服务分流规则为@blackmatrix7，解决懒人配置中苹果服务部分域名无法走指定policy的问题[已调整位置]
 # [-]2023-06-04 48、移除部分重写，添加小红书去水印重写，重新整理重写Part部分
-# [-]2023-06-28 49、调整本地夸克APP的分流规则
+# [-]2023-06-28 49、调整本地夸克APP的分流规则，删除什么值得买的排除域名-*api.smzdm.com，新版已可MITM
 
 
 
