--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -179,7 +179,7 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 # > 为避免网易云解锁节点滥用，有需求的请去「墨鱼手记」公众号回复「网易云」获取
 
 # > 魔法仅供临时使用
-https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
+https://sub.sharecentre.online/sub#in=SCP&emoji=2, tag=🐟临时使用, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Quantumult_X.png, update-interval=3600, opt-parser=true, enabled=true
 
 
 
