--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/06/28 16:38 UTC/GMT +8
+// @UpdateTime        2023/07/10 08:08 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V177)
+// @ConfigVersion     2.0 (V178)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -63,6 +63,7 @@
 # [-]2023-06-02 47、替换苹果服务分流规则为@blackmatrix7，解决懒人配置中苹果服务部分域名无法走指定policy的问题[已调整位置]
 # [-]2023-06-04 48、移除部分重写，添加小红书去水印重写，重新整理重写Part部分
 # [-]2023-06-28 49、调整本地夸克APP的分流规则，删除什么值得买的排除域名-*api.smzdm.com，新版已可MITM，替换Apple的Policy图标
+# [+]2023-07-10 50、新增一条临时使用的机场订阅，方便小白对配置进行更新，此外对节点名称统一命名，命名方式为tg-ddgksf2021-num-序号，大家有空可以研究研究解析器，强大好用
 
 
 
@@ -179,9 +180,9 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 # > 为避免网易云解锁节点滥用，有需求的请去「墨鱼手记」公众号回复「网易云」获取
 
 
-# > 魔法仅供临时使用
+# > 魔法仅供临时使用1
 https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg#delreg=.*&rename=@tg-ddgksf2021-num-+@$index0, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
-
+# > 魔法仅供临时使用2
 https://sub.sharecentre.online/sub#delreg=.*&rename=@tg-ddgksf2021-+@num-$index8, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
 
 
