--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -88,7 +88,7 @@
 ; https://initnil.com/tvOS.mobileconfig
 
 
-# 🟢 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
+# 🟢 墨鱼提醒以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
 
 [general]
 
@@ -282,5 +282,5 @@ force_sni_domain_name = false
 
 hostname = -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
 
-# 🟢 passphrase和p12代为证书&主机名部分, 更新配置前可把旧的配置中passphrase和p12代码拷贝下来, 导入新的配置文件把内容粘贴在对应位置就不用重装证书
+# 🟢 墨鱼提醒passphrase和p12代为证书&主机名部分, 更新配置前可把旧的配置中passphrase和p12代码拷贝下来, 导入新的配置文件把内容粘贴在对应位置就不用重装证书
 
