--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/07/30 14:38 UTC/GMT +8
+// @UpdateTime        2023/08/05 12:28 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V179)
+// @ConfigVersion     2.0 (V180)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -64,6 +64,7 @@
 # [-]2023-06-04 48、移除部分重写，添加小红书去水印重写，重新整理重写Part部分
 # [-]2023-06-28 49、调整本地夸克APP的分流规则，删除什么值得买的排除域名-*api.smzdm.com，新版已可MITM，替换Apple的Policy图标
 # [+]2023-07-10 50、新增一条临时使用的机场订阅，方便小白对配置进行更新，此外对节点名称统一命名，命名方式为tg-ddgksf2021-num-序号，大家有空可以研究研究解析器，强大好用
+# [+]2023-08-05 51、QX通知中，建议关闭NetWork状态通知及关闭分流匹配优化开关
 
 
 
@@ -86,6 +87,10 @@
 ; https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=y6do1j
 # > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15、16）
 ; https://initnil.com/tvOS.mobileconfig
+
+
+# > QuantumultX设置推荐
+; 「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
 
 
 # 🟢 墨鱼提醒以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
