--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2023/10/05 11:40 UTC/GMT +8
+// @UpdateTime        2023/11/09 18:40 UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V187)
+// @ConfigVersion     2.0 (V188)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -68,6 +68,7 @@
 # [+]2023-08-20 52、鉴于不断有小白发邮件咨询为什么AppleStore无法切换登录账户，故在小白配置中，默认添加-*.apple.com，有相关破解需求者请自行移除
 # [+]2023-09-08 53、替换百度网盘倍速的重写链接，新的重写可去除百度网盘开屏广告、应用内广告以及解锁会员倍速功能
 # [+]2023-10-05 54、移除哔哩哔哩自动换区的重写[新版失效]，单独增加Spotify应用的分流，默认指向香港节点[自行按照需求去掉;以启用该条分流]
+# [-]2023-11-09 55、移除酷我音乐纯净版SVIP重写，经群友反馈，纯净版酷我APP内部分VIP音乐无法聆听，故删除
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -140,7 +141,7 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/Bilibili.conf, tag=B站去广告+1080P高码率@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/UnlockVip/Spotify.conf, tag=Spotify音乐VIP[音质≤高]@app2smile, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/dev/raw/master/ForOwnUse.conf, tag=墨鱼专属VIP@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
-https://gist.githubusercontent.com/ddgksf2013/0f76e952f0c4a2579932f45a209b40c3/raw/Kuwo.conf, tag=酷我纯净版SVIP@ddgksf2013, update-interval=86400, opt-parser=false, enabled=false
+;https://gist.githubusercontent.com/ddgksf2013/0f76e952f0c4a2579932f45a209b40c3/raw/Kuwo.conf, tag=酷我纯净版SVIP@ddgksf2013, update-interval=86400, opt-parser=false, enabled=false
 
 
 # ======= 广告净化 ======= #
