--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,9 +9,8 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V194)
+// @ConfigVersion     2.0 (V195)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
-// @ConfigCdnURL      https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
 // ==/UserScript==
 
 # 𝐂𝐮𝐭𝐭𝐥𝐞𝐟𝐢𝐬𝐡 𝐒𝐞𝐥𝐟-𝐮𝐬𝐞 𝐂𝐨𝐧𝐟𝐢𝐠𝐮𝐫𝐚𝐭𝐢𝐨𝐧 𝐂𝐡𝐚𝐧𝐠𝐞𝐥𝐨𝐠 𝐂𝐫𝐞𝐚𝐭𝐞𝐝 𝐛𝐲 𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑
@@ -71,7 +70,7 @@
 # [+]2023-10-05 54、移除哔哩哔哩自动换区的重写[新版失效]，单独增加Spotify应用的分流，默认指向香港节点[自行按照需求去掉;以启用该条分流]
 # [-]2023-11-09 55、移除酷我音乐纯净版SVIP重写，经群友反馈，纯净版酷我APP内部分VIP音乐无法聆听，故删除
 # [-]2023-11-10 56、启用临时使用1订阅，屏蔽临时使用2订阅[无法更新]，提醒订阅仅供临时使用，推荐注册花云https://shrtm.nu/gCi
-# [+]2023-11-18 57、为墨鱼小白QX2.0配置添加直连CDN链接 https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf
+# [+]2023-11-18 57、为墨鱼小白QX2.0配置添加直连CDN链接[ https://cdn.jsdelivr.net/gh/ddgksf2013/Profile/QuantumultX.conf ]
 # [+]2023-11-22 58、将OpenAI的分流替换为blackmatrix7，以保证分流规则的实时可用性
 # [+]2023-12-06 59、添加QuantumultX播放IPV6直播源方法：删去DNS下面的「no-ipv6」，并在「VPN」栏中，开启「兼容性增强」
 
